added acquire and wrangle functions. Tested.

--- a/jada_aquire_and_prep.ipynb
+++ b/jada_aquire_and_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,9 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split \n",
-    "from env import host, user, password"
+    "from env import host, user, password\n",
+    "import acquire\n",
+    "import wrangle"
    ]
   },
   {
@@ -22,34 +24,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_zillow():\n",
-    "    query = '''\n",
-    "    SELECT \n",
-    "    prop.parcelid\n",
-    "    , pred.logerror\n",
-    "    , pred.transactiondate\n",
-    "    , bathroomcnt\n",
-    "    , bedroomcnt\n",
-    "    , calculatedfinishedsquarefeet\n",
-    "    , fips\n",
-    "    , latitude\n",
-    "    , longitude\n",
-    "    , lotsizesquarefeet\n",
-    "    , regionidcity\n",
-    "    , regionidcounty\n",
-    "    , regionidneighborhood\n",
-    "    , regionidzip\n",
-    "    , yearbuilt\n",
-    "    , structuretaxvaluedollarcnt\n",
-    "    , taxvaluedollarcnt\n",
-    "    , landtaxvaluedollarcnt\n",
-    "    , taxamount\n",
-    "from properties_2017 prop\n",
-    "inner join predictions_2017 pred on prop.parcelid = pred.parcelid\n",
-    "where propertylandusetypeid = 261\n",
-    "    '''\n",
-    "    df = pd.read_sql(query, get_db_url('zillow'))\n",
-    "    return df "
+    "df = acquire.get_zillow_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = wrangle.handle_nulls(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "parcelid                        0\n",
+       "bathroomcnt                     0\n",
+       "bedroomcnt                      0\n",
+       "buildingqualitytypeid           0\n",
+       "calculatedfinishedsquarefeet    0\n",
+       "finishedsquarefeet12            0\n",
+       "fips                            0\n",
+       "fullbathcnt                     0\n",
+       "latitude                        0\n",
+       "longitude                       0\n",
+       "lotsizesquarefeet               0\n",
+       "propertycountylandusecode       0\n",
+       "rawcensustractandblock          0\n",
+       "regionidcity                    0\n",
+       "regionidcounty                  0\n",
+       "regionidzip                     0\n",
+       "roomcnt                         0\n",
+       "unitcnt                         0\n",
+       "yearbuilt                       0\n",
+       "structuretaxvaluedollarcnt      0\n",
+       "taxvaluedollarcnt               0\n",
+       "assessmentyear                  0\n",
+       "landtaxvaluedollarcnt           0\n",
+       "taxamount                       0\n",
+       "logerror                        0\n",
+       "heatingorsystemdesc             0\n",
+       "propertylandusedesc             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
    ]
   },
   {
