added function to prep df

--- a/jada_aquire_and_prep.ipynb
+++ b/jada_aquire_and_prep.ipynb
@@ -85,6 +85,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = wrangle.prepare_zillow(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['parcelid',\n",
+       " 'bathroomcnt',\n",
+       " 'bedroomcnt',\n",
+       " 'buildingqualitytypeid',\n",
+       " 'calculatedfinishedsquarefeet',\n",
+       " 'finishedsquarefeet12',\n",
+       " 'fullbathcnt',\n",
+       " 'latitude',\n",
+       " 'longitude',\n",
+       " 'lotsizesquarefeet',\n",
+       " 'propertycountylandusecode',\n",
+       " 'rawcensustractandblock',\n",
+       " 'regionidcity',\n",
+       " 'regionidcounty',\n",
+       " 'regionidzip',\n",
+       " 'roomcnt',\n",
+       " 'unitcnt',\n",
+       " 'yearbuilt',\n",
+       " 'structuretaxvaluedollarcnt',\n",
+       " 'taxvaluedollarcnt',\n",
+       " 'assessmentyear',\n",
+       " 'landtaxvaluedollarcnt',\n",
+       " 'taxamount',\n",
+       " 'logerror',\n",
+       " 'heatingorsystemdesc',\n",
+       " 'propertylandusedesc',\n",
+       " 'County']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
