added function for counties. Added csv

--- a/jada_aquire_and_prep.ipynb
+++ b/jada_aquire_and_prep.ipynb
@@ -85,57 +85,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = wrangle.prepare_zillow(df)"
+    "df = wrangle.add_counties(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['parcelid',\n",
-       " 'bathroomcnt',\n",
-       " 'bedroomcnt',\n",
-       " 'buildingqualitytypeid',\n",
-       " 'calculatedfinishedsquarefeet',\n",
-       " 'finishedsquarefeet12',\n",
-       " 'fullbathcnt',\n",
-       " 'latitude',\n",
-       " 'longitude',\n",
-       " 'lotsizesquarefeet',\n",
-       " 'propertycountylandusecode',\n",
-       " 'rawcensustractandblock',\n",
-       " 'regionidcity',\n",
-       " 'regionidcounty',\n",
-       " 'regionidzip',\n",
-       " 'roomcnt',\n",
-       " 'unitcnt',\n",
-       " 'yearbuilt',\n",
-       " 'structuretaxvaluedollarcnt',\n",
-       " 'taxvaluedollarcnt',\n",
-       " 'assessmentyear',\n",
-       " 'landtaxvaluedollarcnt',\n",
-       " 'taxamount',\n",
-       " 'logerror',\n",
-       " 'heatingorsystemdesc',\n",
-       " 'propertylandusedesc',\n",
-       " 'County']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 75206 entries, 0 to 76724\n",
+      "Data columns (total 29 columns):\n",
+      "parcelid                        75206 non-null int64\n",
+      "bathroomcnt                     75206 non-null float64\n",
+      "bedroomcnt                      75206 non-null float64\n",
+      "buildingqualitytypeid           75206 non-null float64\n",
+      "calculatedfinishedsquarefeet    75206 non-null float64\n",
+      "finishedsquarefeet12            75206 non-null float64\n",
+      "fullbathcnt                     75206 non-null float64\n",
+      "latitude                        75206 non-null float64\n",
+      "longitude                       75206 non-null float64\n",
+      "lotsizesquarefeet               75206 non-null float64\n",
+      "propertycountylandusecode       75206 non-null object\n",
+      "rawcensustractandblock          75206 non-null float64\n",
+      "regionidcity                    75206 non-null float64\n",
+      "regionidcounty                  75206 non-null float64\n",
+      "regionidzip                     75206 non-null float64\n",
+      "roomcnt                         75206 non-null float64\n",
+      "unitcnt                         75206 non-null float64\n",
+      "yearbuilt                       75206 non-null float64\n",
+      "structuretaxvaluedollarcnt      75206 non-null float64\n",
+      "taxvaluedollarcnt               75206 non-null float64\n",
+      "assessmentyear                  75206 non-null float64\n",
+      "landtaxvaluedollarcnt           75206 non-null float64\n",
+      "taxamount                       75206 non-null float64\n",
+      "logerror                        75206 non-null float64\n",
+      "heatingorsystemdesc             75206 non-null object\n",
+      "propertylandusedesc             75206 non-null object\n",
+      "Los_Angeles                     75206 non-null uint8\n",
+      "Orange                          75206 non-null uint8\n",
+      "Ventura                         75206 non-null uint8\n",
+      "dtypes: float64(22), int64(1), object(3), uint8(3)\n",
+      "memory usage: 15.7+ MB\n"
+     ]
     }
    ],
    "source": [
-    "df.columns.to_list()"
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('zillow_df')"
    ]
   },
   {
