trouble shooting csv file

--- a/jada_aquire_and_prep.ipynb
+++ b/jada_aquire_and_prep.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,426 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('zillow_df')"
+    "df.to_csv('zillow_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('zillow_df.csv')  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>parcelid</th>\n",
+       "      <th>bathroomcnt</th>\n",
+       "      <th>bedroomcnt</th>\n",
+       "      <th>buildingqualitytypeid</th>\n",
+       "      <th>calculatedfinishedsquarefeet</th>\n",
+       "      <th>finishedsquarefeet12</th>\n",
+       "      <th>fips</th>\n",
+       "      <th>fullbathcnt</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>...</th>\n",
+       "      <th>unitcnt</th>\n",
+       "      <th>yearbuilt</th>\n",
+       "      <th>structuretaxvaluedollarcnt</th>\n",
+       "      <th>taxvaluedollarcnt</th>\n",
+       "      <th>assessmentyear</th>\n",
+       "      <th>landtaxvaluedollarcnt</th>\n",
+       "      <th>taxamount</th>\n",
+       "      <th>logerror</th>\n",
+       "      <th>heatingorsystemdesc</th>\n",
+       "      <th>propertylandusedesc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>14297519</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3100.0</td>\n",
+       "      <td>3100.0</td>\n",
+       "      <td>6059.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>33634931.0</td>\n",
+       "      <td>-117869207.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "      <td>485713.0</td>\n",
+       "      <td>1023282.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>537569.0</td>\n",
+       "      <td>11013.72</td>\n",
+       "      <td>0.025595</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>17052889</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1465.0</td>\n",
+       "      <td>1465.0</td>\n",
+       "      <td>6111.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34449266.0</td>\n",
+       "      <td>-119281531.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1967.0</td>\n",
+       "      <td>88000.0</td>\n",
+       "      <td>464000.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>376000.0</td>\n",
+       "      <td>5672.48</td>\n",
+       "      <td>0.055619</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>14186244</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1243.0</td>\n",
+       "      <td>1243.0</td>\n",
+       "      <td>6059.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>33886168.0</td>\n",
+       "      <td>-117823170.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1962.0</td>\n",
+       "      <td>85289.0</td>\n",
+       "      <td>564778.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>479489.0</td>\n",
+       "      <td>6488.30</td>\n",
+       "      <td>0.005383</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>12177905</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2376.0</td>\n",
+       "      <td>2376.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>34245180.0</td>\n",
+       "      <td>-118240722.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1970.0</td>\n",
+       "      <td>108918.0</td>\n",
+       "      <td>145143.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>36225.0</td>\n",
+       "      <td>1777.51</td>\n",
+       "      <td>-0.103410</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>10887214</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1312.0</td>\n",
+       "      <td>1312.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>34185120.0</td>\n",
+       "      <td>-118414640.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>73681.0</td>\n",
+       "      <td>119407.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>45726.0</td>\n",
+       "      <td>1533.89</td>\n",
+       "      <td>0.006940</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Condominium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76720</td>\n",
+       "      <td>11000655</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1286.0</td>\n",
+       "      <td>1286.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>34245368.0</td>\n",
+       "      <td>-118282383.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1940.0</td>\n",
+       "      <td>70917.0</td>\n",
+       "      <td>354621.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>283704.0</td>\n",
+       "      <td>4478.43</td>\n",
+       "      <td>0.020615</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76721</td>\n",
+       "      <td>17239384</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1612.0</td>\n",
+       "      <td>1612.0</td>\n",
+       "      <td>6111.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>34300140.0</td>\n",
+       "      <td>-118706327.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>50683.0</td>\n",
+       "      <td>67205.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>16522.0</td>\n",
+       "      <td>1107.48</td>\n",
+       "      <td>0.013209</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76722</td>\n",
+       "      <td>12773139</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1032.0</td>\n",
+       "      <td>1032.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34040895.0</td>\n",
+       "      <td>-118038169.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1954.0</td>\n",
+       "      <td>32797.0</td>\n",
+       "      <td>49546.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>16749.0</td>\n",
+       "      <td>876.43</td>\n",
+       "      <td>0.037129</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76723</td>\n",
+       "      <td>12826780</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1762.0</td>\n",
+       "      <td>1762.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>33937685.0</td>\n",
+       "      <td>-117996709.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1955.0</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>522000.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>382000.0</td>\n",
+       "      <td>6317.15</td>\n",
+       "      <td>0.007204</td>\n",
+       "      <td>Central</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76724</td>\n",
+       "      <td>13083743</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1050.0</td>\n",
+       "      <td>1050.0</td>\n",
+       "      <td>6037.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>34010864.0</td>\n",
+       "      <td>-117900894.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>77118.0</td>\n",
+       "      <td>259334.0</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>182216.0</td>\n",
+       "      <td>3345.78</td>\n",
+       "      <td>-0.197755</td>\n",
+       "      <td>Floor/Wall</td>\n",
+       "      <td>Single Family Residential</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>75206 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       parcelid  bathroomcnt  bedroomcnt  buildingqualitytypeid  \\\n",
+       "0      14297519          3.5         4.0                    6.0   \n",
+       "1      17052889          1.0         2.0                    6.0   \n",
+       "2      14186244          2.0         3.0                    6.0   \n",
+       "3      12177905          3.0         4.0                    8.0   \n",
+       "4      10887214          3.0         3.0                    8.0   \n",
+       "...         ...          ...         ...                    ...   \n",
+       "76720  11000655          2.0         2.0                    6.0   \n",
+       "76721  17239384          2.0         4.0                    6.0   \n",
+       "76722  12773139          1.0         3.0                    4.0   \n",
+       "76723  12826780          2.0         3.0                    6.0   \n",
+       "76724  13083743          2.0         3.0                    4.0   \n",
+       "\n",
+       "       calculatedfinishedsquarefeet  finishedsquarefeet12    fips  \\\n",
+       "0                            3100.0                3100.0  6059.0   \n",
+       "1                            1465.0                1465.0  6111.0   \n",
+       "2                            1243.0                1243.0  6059.0   \n",
+       "3                            2376.0                2376.0  6037.0   \n",
+       "4                            1312.0                1312.0  6037.0   \n",
+       "...                             ...                   ...     ...   \n",
+       "76720                        1286.0                1286.0  6037.0   \n",
+       "76721                        1612.0                1612.0  6111.0   \n",
+       "76722                        1032.0                1032.0  6037.0   \n",
+       "76723                        1762.0                1762.0  6037.0   \n",
+       "76724                        1050.0                1050.0  6037.0   \n",
+       "\n",
+       "       fullbathcnt    latitude    longitude  ...  unitcnt yearbuilt  \\\n",
+       "0              3.0  33634931.0 -117869207.0  ...      1.0    1998.0   \n",
+       "1              1.0  34449266.0 -119281531.0  ...      1.0    1967.0   \n",
+       "2              2.0  33886168.0 -117823170.0  ...      1.0    1962.0   \n",
+       "3              3.0  34245180.0 -118240722.0  ...      1.0    1970.0   \n",
+       "4              3.0  34185120.0 -118414640.0  ...      1.0    1964.0   \n",
+       "...            ...         ...          ...  ...      ...       ...   \n",
+       "76720          2.0  34245368.0 -118282383.0  ...      1.0    1940.0   \n",
+       "76721          2.0  34300140.0 -118706327.0  ...      1.0    1964.0   \n",
+       "76722          1.0  34040895.0 -118038169.0  ...      1.0    1954.0   \n",
+       "76723          2.0  33937685.0 -117996709.0  ...      1.0    1955.0   \n",
+       "76724          2.0  34010864.0 -117900894.0  ...      1.0    1960.0   \n",
+       "\n",
+       "       structuretaxvaluedollarcnt  taxvaluedollarcnt  assessmentyear  \\\n",
+       "0                        485713.0          1023282.0          2016.0   \n",
+       "1                         88000.0           464000.0          2016.0   \n",
+       "2                         85289.0           564778.0          2016.0   \n",
+       "3                        108918.0           145143.0          2016.0   \n",
+       "4                         73681.0           119407.0          2016.0   \n",
+       "...                           ...                ...             ...   \n",
+       "76720                     70917.0           354621.0          2016.0   \n",
+       "76721                     50683.0            67205.0          2016.0   \n",
+       "76722                     32797.0            49546.0          2016.0   \n",
+       "76723                    140000.0           522000.0          2016.0   \n",
+       "76724                     77118.0           259334.0          2016.0   \n",
+       "\n",
+       "       landtaxvaluedollarcnt  taxamount  logerror  heatingorsystemdesc  \\\n",
+       "0                   537569.0   11013.72  0.025595                 None   \n",
+       "1                   376000.0    5672.48  0.055619                 None   \n",
+       "2                   479489.0    6488.30  0.005383                 None   \n",
+       "3                    36225.0    1777.51 -0.103410              Central   \n",
+       "4                    45726.0    1533.89  0.006940              Central   \n",
+       "...                      ...        ...       ...                  ...   \n",
+       "76720               283704.0    4478.43  0.020615              Central   \n",
+       "76721                16522.0    1107.48  0.013209                 None   \n",
+       "76722                16749.0     876.43  0.037129              Central   \n",
+       "76723               382000.0    6317.15  0.007204              Central   \n",
+       "76724               182216.0    3345.78 -0.197755           Floor/Wall   \n",
+       "\n",
+       "             propertylandusedesc  \n",
+       "0      Single Family Residential  \n",
+       "1      Single Family Residential  \n",
+       "2      Single Family Residential  \n",
+       "3      Single Family Residential  \n",
+       "4                    Condominium  \n",
+       "...                          ...  \n",
+       "76720  Single Family Residential  \n",
+       "76721  Single Family Residential  \n",
+       "76722  Single Family Residential  \n",
+       "76723  Single Family Residential  \n",
+       "76724  Single Family Residential  \n",
+       "\n",
+       "[75206 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
